Fixed some spacing

--- a/style.css
+++ b/style.css
@@ -560,7 +560,6 @@ h2 {
         padding: 0 0;
         justify-content: center; /* Horizontally center items */
         align-items: center;
-
     }
 
 
@@ -731,7 +730,7 @@ h2 {
         top: 0;
         left: 0;
         width: 100%;
-        height: 90%;
+        height: 90% !important;
         z-index: -1; 
     }
 }
